--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "aos": "^2.3.4",
     "gsap": "^3.12.5",
     "imagesloaded": "^5.0.0",
     "mdb-ui-kit": "^7.2.0",
