--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mdb-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-scroll": "^1.9.0",
