--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "aos": "^2.3.4",
+    "emotion": "^11.0.0",
     "gsap": "^3.12.5",
     "imagesloaded": "^5.0.0",
     "mdb-ui-kit": "^7.2.0",
@@ -22,6 +24,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-scroll": "^1.9.0",
+    "react-spinners": "^0.14.1",
     "styled-components": "^6.1.10",
     "three": "^0.164.1"
   },
